--- a/styles/main.css
+++ b/styles/main.css
@@ -12,10 +12,10 @@ main {
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.9;
-    transition-duration: 0.8;
+    transition-duration: 0.7;
 }
 main:hover {
-    background-image: url(../images/background-image-edited.jpg);
+    background-image: url(../images/background-image-edited.png);
     background-repeat: no-repeat;
     background-size: cover;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
@@ -63,10 +63,10 @@ aside {
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.9;
-    transition-duration: 0.8;
+    transition-duration: 0.7;
 }
 #all:hover {
-    background-image: url(../images/background-image-edited.jpg);
+    background-image: url(../images/background-image-edited.png);
     background-repeat: no-repeat;
     background-size: cover;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
