--- a/styles/main.css
+++ b/styles/main.css
@@ -49,7 +49,7 @@ aside {
     flex-direction: column-reverse;
     align-items: flex-end;
 }
-.page2OL{
+.page2oL{
     margin:auto;
     width: 25%;
     height: 35%;
@@ -69,7 +69,7 @@ aside {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     color: white;
 }
-#page2OLCat {
+#page2oLCat {
     color: red;
 }
 #all {
